# research-pilot

./: .env.local.example  .gitignore  DESIGN.md  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/collection/: page.tsx
app/interests/: page.tsx
app/interests/[id]/: page.tsx
app/paper/[id]/: error.tsx  page.tsx
app/paper/[id]/chat/: page.tsx
app/search/: page.tsx
app/venues/: page.tsx
components/: AISummary.tsx  ArxivSidebar.tsx  BookmarkButton.tsx  ChatPanel.tsx  CollectionView.tsx  DatePicker.tsx  FeedHotkeys.tsx  Footer.tsx  Header.tsx  Hero.tsx  InterestEditor.tsx  MobileNavDrawer.tsx  NavTabs.tsx  Pagination.tsx  PaperCard.tsx  PaperChatLayout.tsx  PaperChatPanel.tsx  PaperHeader.tsx  PaperRightRail.tsx  PaperWorkspace.tsx  RecommendationsView.tsx  SearchBar.tsx  ViewModeToggle.tsx
docs/: chatpaper-deep-gap-2.md  chatpaper-design-analysis.md  dev-plan-2.md  dev-plan.md  feature-gap-comparison.md
lib/: api.ts  storage.ts  types.ts  use-bookmark.ts  use-hotkey.ts  user.ts  utils.ts
scripts/: dev.sh  mongo-start.sh  mongo-stop.sh
server-rs/: .env.example  Cargo.toml
server-rs/src/: arxiv.rs  config.rs  error.rs  llm.rs  main.rs  models.rs  repo.rs  state.rs
server-rs/src/routes/: articles.rs  bookmarks.rs  chat.rs  clicks.rs  interests.rs  meta.rs  mod.rs  search.rs  summarize.rs  translate.rs  venues.rs
tests/e2e/: comprehensive.spec.ts  smoke.spec.ts
